--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "prettier": "prettier --config .prettierrc 'src/**/*.js' --write",
+    "lint": "eslint 'index.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^15.6.1",
     "jasmine": "^3.7.0",
     "jasmine-spec-reporter": "^7.0.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
+    "@types/jasmine": "^3.7.5",
+    "@types/node": "^15.6.1",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "@types/jasmine": "^3.7.5"
+    "typescript": "^4.0.5"
   }
 }
