--- a/package.json
+++ b/package.json
@@ -4,26 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.ts",
     "build": "npx tsc",
-    "prettier": "prettier --config .prettierrc 'src/**/*.js' --write",
-    "lint": "eslint 'index.js'"
+    "prettier": "prettier --config .prettierrc 'build/**/*.js' --write",
+    "prettier:check": "prettier --config .prettierrc 'build/**/*.js' --check .",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jasmine": "^3.7.0",
-    "jasmine-spec-reporter": "^7.0.0",
+    "@types/express": "^4.17.12",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.6.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
     "@types/jasmine": "^3.7.5",
     "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jasmine": "^3.7.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "tsc-watch": "^4.4.0"
   }
 }
