--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-POSTGRES_HOST = '217.0.0.1'
-POSTGRES_DB = ''
-POSTGRES_USER = ''
-POSTGRES_PASSWORD = ''
+POSTGRES_HOST = 127.0.0.1
+POSTGRES_DB = storefront
+POSTGRES_USER = storefront
+POSTGRES_PASSWORD = storefront@admin
+
