--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "image-processing-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "nodemon src/server.ts",
     "build": "npx tsc",
+    "test": "yarn run build && yarn run jasmine",
     "prettier": "prettier --config .prettierrc 'build/**/*.js' --write",
     "prettier:check": "prettier --config .prettierrc 'build/**/*.js' --check .",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "tsc": "tsc",
+    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +19,12 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "@types/pg": "^8.6.0",
+    "body-parser": "^1.19.0",
+    "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "pg": "^8.6.0",
     "typescript": "^4.3.2"
   },
