--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-POSTGRES_HOST = 127.0.0.1
-POSTGRES_DB = storefront
-POSTGRES_USER = storefront
-POSTGRES_PASSWORD = storefront@admin
-
+POSTGRES_HOST=127.0.0.1
+POSTGRES_DB=storefront
+POSTGRES_USER=storefront
+POSTGRES_PASSWORD=storefront@admin
+POSTGRES_TEST_DB=storefront_test
+ENV=dev
