--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "build": "npx tsc",
-    "test": "yarn run build && yarn run jasmine",
+    "test_dev": "yarn run build && yarn run jasmine",
     "prettier": "prettier --config .prettierrc 'build/**/*.js' --write",
     "prettier:check": "prettier --config .prettierrc 'build/**/*.js' --check .",
     "lint": "eslint . --ext .ts",
     "tsc": "tsc",
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'"
+    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
+    "migrate": "db-migrate --env test up && db-migrate up",
+    "test": "ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test"
   },
   "keywords": [],
   "author": "",
