--- a/.env
+++ b/.env
@@ -3,4 +3,7 @@ POSTGRES_DB=storefront
 POSTGRES_USER=storefront
 POSTGRES_PASSWORD=storefront@admin
 POSTGRES_TEST_DB=storefront_test
+BCRYPT_PASSWORD=lolito
+SALT_ROUNDS=10
+TOKEN_SECRET=lolito
 ENV=dev
