--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint . --ext .ts",
     "tsc": "tsc",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "migrate": "db-migrate --env test up && db-migrate up",
-    "test": "ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test"
+    "migrate": "db-migrate --env dev up && db-migrate up",
+    "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
+    "test_dev_db": "ENV=dev db-migrate --env dev up && jasmine-ts && db-migrate db:drop dev"
   },
   "keywords": [],
   "author": "",
@@ -21,17 +22,21 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "@types/pg": "^8.6.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "^3.7.5",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
