--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-processing-api",
+  "name": "storefront-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
@@ -12,15 +12,19 @@
     "lint": "eslint . --ext .ts",
     "tsc": "tsc",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "migrate": "db-migrate --env dev up && db-migrate up",
-    "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
-    "test_dev_db": "ENV=dev db-migrate --env dev up && jasmine-ts && db-migrate db:drop dev"
+    "migrate": "db-migrate up",
+    "test": "ENV=test yarn build && db-migrate reset -e test && db-migrate up -e test && jasmine-ts && db-migrate reset -e test && db-migrate up -e test",
+    "test_u": "ENV=test db-migrate reset && db-migrate up && jasmine-ts && db-migrate reset && db-migrate up"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
+    "@types/jasmine": "^3.7.5",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/pg": "^8.6.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -31,12 +35,10 @@
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
+    "sql-fixtures": "^1.0.4",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jasmine": "^3.7.5",
-    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
